[package]
name = "msearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "3.0.0"
clap = { version = "4.5.60", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.8.2"
